--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "async-ask",
   "version": "1.0.0",
   "description": "simple prompt questioning for beginners",
-  "main": "index.js",
+  "files": ["dist/index.d.ts", "dist/index.js"],
   "scripts": {
     "build": "tsc --build tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
