--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "url": "git+https://github.com/mkloouo/async-ask.git"
   },
   "keywords": [
+    "async-ask",
+    "async ask",
     "readline",
     "ask",
     "promise",
