Add main file entry

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "async-ask",
   "version": "1.0.3",
   "description": "simple prompt questioning for beginners",
+  "main": "dist/index.js",
   "files": [
     "dist/index.d.ts",
     "dist/index.js"
